tests/tooling/fixtures/native/recovery/positive/message_send_nil_immutable_global_identifier_post_pure_prototype_call_elision.objc3
module MessageSendNilImmutableGlobalIdentifierPostPurePrototypeCallElision;

let receiver = nil;

pure fn touch() -> i32;

fn main() -> i32 {
  touch();
  return [receiver ping];
}
